--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "tsc",
     "postbuild": "node scripts/ensure-bin-executable.cjs",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "docs:diagram": "node scripts/render-mermaid.cjs"
   },
   "engines": {
     "node": ">=18"
@@ -26,6 +27,7 @@
     "LICENSE"
   ],
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^11.0.0",
     "@types/node": "^25.2.0",
     "typescript": "^5.7.2",
     "vitest": "^4.0.18"
